# progetto_grande

./: .gitignore  LOG.md  main.py  pyproject.toml
maps/: map1.txt
src/progetto_grande/: boomerang.py  constants.py  display.py  factory.py  gameview.py  main.py  map.py  navmesh.py  player.py  textures.py  world.py
src/progetto_grande/Monsters/: bat.py  blob.py  monster.py  spinner.py
src/progetto_grande/Weapons/: boomerang.py  sword.py  weapon.py
tests/: conftest.py  test_bat.py  test_bob.py  test_collect_crystals.py  test_keyboard.py  test_map.py  test_navmesh.py  test_player.py
tests/maps/: map1.txt
